syntax = 'proto3';

service AuthService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
    rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse) {}
    rpc GetUserByUserName(GetUserByUserNameRequest) returns (GetUserByUserNameResponse) {}
    rpc GetListUser(GetListUserRequest) returns (GetListUserResponse) {}
    rpc GetUserCount(GetUserCountRequest) returns (GetUserCountResponse) {}
    rpc CreateUserPassword(CreateUserPasswordRequest) returns (CreateUserPasswordResponse) {}
    rpc GetUserPasswordByUserId(GetUserPasswordByUserIdRequest) returns (GetUserPasswordByUserIdResponse) {}
    rpc LoginByPassword(LoginByPasswordRequest) returns (LoginByPasswordResponse) {}
    rpc GetUserRoles(GetUserRolesRequest) returns (GetUserRolesResponse) {}
    rpc CreateRole(CreateRoleRequest) returns (CreateRoleResponse) {}
    rpc UpdateRole(UpdateRoleRequest) returns (UpdateRoleResponse) {}
    rpc DeleteRole(DeleteRoleRequest) returns (DeleteRoleResponse) {}
    rpc GetRoleById(GetRoleByIdRequest) returns (GetRoleByIdResponse) {}
    rpc GetListRole(GetListRoleRequest) returns (GetListRoleResponse) {}
    rpc GetRoleCount(GetRoleCountRequest) returns (GetRoleCountResponse) {}
    rpc UpdateUserRoles(UpdateUserRolesRequest) returns (UpdateUserRolesResponse) {}
    rpc CreatePermission(CreatePermissionRequest) returns (CreatePermissionResponse) {}
    rpc UpdatePermission(UpdatePermissionRequest) returns (UpdatePermissionResponse) {}
    rpc DeletePermission(DeletePermissionRequest) returns (DeletePermissionResponse) {}
    rpc GetPermissionById(GetPermissionByIdRequest) returns (GetPermissionByIdResponse) {}
    rpc GetListPermission(GetListPermissionRequest) returns (GetListPermissionResponse) {}
    rpc UpdateRolePermissions(UpdateRolePermissionsRequest) returns (UpdateRolePermissionsResponse) {}
}

// Bussiness logic
message User {
    int32 user_id = 1;
    string user_name = 2;
    string display_name = 3;
    string email = 4;
}

message UserPassword {
    int32 user_id = 1;
    string password = 2;
}

message Role {
    int32 role_id = 1;
    string name = 2;
}

message Permission {
    int32 permission_id = 1;
    string resource = 2;
    string action = 3;
}

// Request - Response
message Empty {}

message CreateUserRequest {
    string user_name = 1;
    optional string display_name = 2;
    string email = 3;
    string provider = 4;
}

message CreateUserResponse {
    User user = 1;
}

message UpdateUserRequest {
    int32 user_id = 1;
    optional string display_name = 2;
    optional string email = 3;
}

message UpdateUserResponse {
    User user = 1;
}

message DeleteUserRequest {
    int32 user_id = 1;
}

message DeleteUserResponse {
    bool deleted = 1;
}

message GetUserByIdRequest {
    int32 user_id = 1;
}

message GetUserByIdResponse {
    User user = 1;
}

message GetUserByUserNameRequest {
    string user_name = 1;
}

message GetUserByUserNameResponse {
    User user = 1;
}

message GetListUserOptions {
    optional string keyword = 1;
}

message GetListUserRequest {
    int32 page = 1;
    int32 limit = 2;
    optional GetListUserOptions options = 3;
}

message GetListUserResponse {
    repeated User users = 1;
}

message GetUserCountRequest {
    optional GetListUserOptions options = 1;
}

message GetUserCountResponse {
    int32 count = 1;
}

message CreateUserPasswordRequest {
    int32 user_id = 1;
    string password = 2;
}

message CreateUserPasswordResponse {
    UserPassword user_password = 1;
}

message GetUserPasswordByUserIdRequest {
    int32 user_id = 1;
}

message GetUserPasswordByUserIdResponse {
    UserPassword user_password = 1;
}

message LoginByPasswordRequest {
    string user_name = 1;
    string password = 2;
}

message LoginByPasswordResponse {
    User user = 1;
    string token = 2;
}

message GetUserRolesRequest {
    int32 user_id = 1;
}

message GetUserRolesResponse {
    repeated Role roles = 1;
}

message CreateRoleRequest {
    string name = 1;
}

message CreateRoleResponse {
    Role role = 1;
}

message UpdateRoleRequest {
    int32 role_id = 1;
    string name = 2;
}

message UpdateRoleResponse {
    Role role = 1;
}

message DeleteRoleRequest {
    int32 role_id = 1;
}

message DeleteRoleResponse {
    bool deleted = 1;
}

message GetRoleByIdRequest {
    int32 role_id = 1;
}

message GetRoleByIdResponse {
    Role role = 1;
}


message GetListRoleOptions {
    optional string keyword = 1;
}

message GetListRoleRequest {
    int32 page = 1;
    int32 limit = 2;
    optional GetListRoleOptions options = 3;
}

message GetListRoleResponse {
    repeated Role roles = 1;
}

message GetRoleCountRequest {
    optional GetListRoleOptions options = 1;
}

message GetRoleCountResponse {
    int32 count = 1;
}

message UpdateUserRolesRequest {
    int32 user_id = 1;
    repeated int32 role_ids = 2;
}

message UpdateUserRolesResponse {
    bool updated = 1;
}

message CreatePermissionRequest {
    string resource = 1;
    string action = 2;
}

message CreatePermissionResponse {
    Permission permission = 1;
}

message UpdatePermissionRequest {
    int32 permission_id = 1;
    string resource = 2;
    string action = 3;
}

message UpdatePermissionResponse {
    Permission permission = 1;
}

message DeletePermissionRequest {
    int32 permission_id = 1;
}

message DeletePermissionResponse {
    bool deleted = 1;
}

message GetPermissionByIdRequest {
    int32 permission_id = 1;
}

message GetPermissionByIdResponse {
    Permission permission = 1;
}

message GetListPermissionRequest {}

message GetListPermissionResponse {
    repeated Permission permissions = 1;
}

message UpdateRolePermissionsRequest {
    int32 role_id = 1;
    repeated int32 permission_ids = 2;
}

message UpdateRolePermissionsResponse {
    bool updated = 1;
}
