syntax = 'proto3';

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
    rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse) {}
    rpc GetUserByUserName(GetUserByUserNameRequest) returns (GetUserByUserNameResponse) {}
    rpc GetListUser(GetListUserRequest) returns (GetListUserResponse) {}
    rpc GetUserCount(GetUserCountRequest) returns (GetUserCountResponse) {}
}

message User {
    int32 user_id = 1;
    string user_name = 2;
    string display_name = 3;
    string email = 4;
}

message CreateUserRequest {
    string user_name = 1;
    optional string display_name = 2;
    string email = 3;
    string provider = 4;
}

message CreateUserResponse {
    User user = 1;
}

message UpdateUserRequest {
    optional string display_name = 1;
    optional string email = 2;
}

message UpdateUserResponse {
    User user = 1;
}

message DeleteUserRequest {
    int32 user_id = 1;
}

message DeleteUserResponse {
    bool deleted = 1;
}

message GetUserByIdRequest {
    int32 user_id = 1;
}

message GetUserByIdResponse {
    User user = 1;
}

message GetUserByUserNameRequest {
    string user_name = 1;
}

message GetUserByUserNameResponse {
    User user = 1;
}

message GetListUserOptions {
    optional string keyword = 1;
}

message GetListUserRequest {
    int32 page = 1;
    int32 limit = 2;
    optional GetListUserOptions options = 3;
}

message GetListUserResponse {
    repeated User users = 1;
}

message GetUserCountRequest {
    optional GetListUserOptions options = 1;
}

message GetUserCountResponse {
    int32 count = 1;
}